# Openbay

./: .gitignore  Aste online.docx  AsteOnline.sql  CMakeLists.txt  README.md  launch.sh
doc/: Aste online.docx  Openbay.docx  Volume dei dati.xlsx
doc/Progettazione Logica/: Modello Relazionale.docx  Modello Relazionale.mwb  note.txt
scripts/: Aste_Online.sql  Create tables.py  Openbay.sql  Permissions.sql  bowling_loader.py  consegna.sh  dump_db.sh  login_procedure.sql  offerta_max.sql  regex.py  tables.sql
src/: main.c
src/controller/: addetto_comunale.c  addetto_comunale.h  admin.c  admin.h  login.c  login.h  piscina.c  piscina.h  teacher.c  teacher.h  user.c  user.h
src/model/: db.c  db.h
src/utils/: db.c  db.h  graphic.c  io.c  io.h  validation.c  validation.h
src/view/: addetto_comunale.c  addetto_comunale.h  admin.c  admin.h  login.c  login.h  piscina.c  piscina.h  teacher.c  teacher.h  user.c  user.h
